rename the js callback functions

--- a/README.org
+++ b/README.org
@@ -162,29 +162,30 @@ This filter allows you to run arbitrary JS code to transform the articles. The J
 
 Configuration type: string. The string is the JS code to run.
 
-You must define either (or both) of two functions: =update_feed= and =update_post=.
+You must define either (or both) of the two global functions: =modify_feed= and =modify_post=.
 
-**** update_feed
+**** modify_feed
 
-You can define a function named =update_feed= that takes one argument: =feed=, where =feed= is the RSS feed. The function should return the updated =feed=.
+You can define a function named =modify_feed= that takes one argument: =feed=, where =feed= is the RSS feed. The function should return the updated =feed=.
 
-See [[https://docs.rs/rss/latest/rss/struct.Channel.html][Feed]] for the available fields of =feed=. Here's an example of updating feed's title:
+See [[https://docs.rs/rss/latest/rss/struct.Channel.html][Feed]] for the available fields of =feed=. Here's an example on updating a feed's title:
 
 #+begin_src yaml
   - path: /set-title.xml
+    source: https://tokio.rs/_next/static/feed.xml
     filters:
       - js: |
-          function update_feed(feed) {
-            feed.title = "My New Feed"
+          function modify_feed(feed) {
+            feed.title = "My Modified Tokio Blog Feed"
             return feed;
           }
 #+end_src
 
 You can use this function to modify arbitrary fields in the feed or even add new posts.
 
-**** update_post
+**** modify_post
 
-More often you may want to run a filter on individual posts instead of the whole feed. In such case you can deffine a function named =update_post= that takes two arguments: =feed= and =post=, where =feed= is the RSS feed and =post= is the article. The function should return the updated =post=. If you want to remove the article, return =null=.
+More often you may want to run a filter on individual posts instead of the whole feed. In such case you can define a function named =modify_post= that takes two arguments: =feed= and =post=, where =feed= is the RSS feed and =post= is the article. The function should return the updated =post=. If you want to remove the article, return =null=.
 
 The actual fields of =feed= and =post= can be found in the rss crate: [[https://docs.rs/rss/latest/rss/struct.Channel.html][Feed]], [[https://docs.rs/rss/latest/rss/struct.Item.html][Post]]. But keep in mind that depending on the source and previous filters, you may get different fields. It's best to print out the =feed= and =post= to see what fields are available. The sample =/inspect.xml= endpoint is useful for this purpose.
 
@@ -192,7 +193,7 @@ The actual fields of =feed= and =post= can be found in the rss crate: [[https://
   - path: /inspect.xml
     filters:
       - js: |
-          function update_post(feed, post) {
+          function modify_post(feed, post) {
             post.content = `<pre>${JSON.stringify(post, null, 2)}</pre>`;
             return post;
           }
