move filter documentations into wiki

--- a/README.org
+++ b/README.org
@@ -89,114 +89,8 @@ Properties:
 
 ** Filters
 
-*** Full Text (=full_text=)
+See [[https://github.com/shouya/rss-funnel/wiki/Filters][Filters]] for the documentations for all available filters.
 
-This filter fetches the full HTML of the article from the article's =link= and fill it in the =content= field of the article.
+** Cookbook
 
-Configuration type: Object
-
-Properties:
-
-- timeout (optional, Duration): The timeout in each individual request. You can specify a string value like =20s= ([[https://docs.rs/duration-str/latest/duration_str/index.html][supported formats]]). Default to 10 seconds.
-- parallelism (optional, number): The number of parallel requests to make. Default to =20=.
-- simplify (optional, boolean): Whether to simplify the HTML using [[https://github.com/kumabook/readability][readability]]. Default to =false=.
-- append_mode (optional, boolean): Whether to *append* the full text to the existing content. If not, the content is *replaced* with the full text. Default to =false=.
-
-*** Simplify HTML (=simplify_html=)
-
-This filter simplifies the HTML using [[https://github.com/kumabook/readability][readability]].
-
-Configuration type: Object. Only an empty object without property is accepted.
-
-*** Remove HTML elements (=remove_element=)
-
-This filter removes HTML elements matching the CSS selectors.
-
-Configuration type: Array of strings. Each string is a CSS selector.
-
-*** Keep HTML elements (=keep_element=)
-
-This filter keeps HTML elements matching the given CSS selector.
-
-Configuration type: string. The string is a CSS selector.
-
-*** Split (=split=)
-
-This filter splits one article into multiple ones. It is useful for splitting aggregated RSS feeds into individual articles (like [[https://www.daemonology.net/hn-daily/][Hacker News Daily]]).
-
-Each article is split by the given CSS selector. You must specify the css selectors for various fields, including =title=, =link=, =content=, as well as =author=. The =author= field is optional.
-
-Configuration type: Object
-
-Properties:
-
-- title (required, string): The CSS selector for the title.
-- link (required, string): The CSS selector for the link.
-- content (required, string): The CSS selector for the content.
-- author (optional, string): The CSS selector for the author.
-
-The selectors are evaluated against the article's HTML. There is an validation to ensure that all selectors match the same number of elements. Or else the unsplit article is returned.
-
-*** Sanitize text (=sanitize=)
-
-This filter allows you to redact or replace text in the content of the articles. The operations are executed in the order specified.
-
-Configuration type: Array of "operations".
-
-Operations:
-
-- =remove= (string): Remove the matched text.
-- =remove_regex= (string): Remove the text matching the given regular expression.
-- =replace= (object): Replace the matched text with the given string.
-  + keys:
-    - =from= (string): The text to replace.
-    - =to= (string): The replacement.
-- =replace_regex= (object): Replace the text matching the given regular expression with the given string.
-  + keys:
-    - =from= (string): The regular expression to match. Use =(?<name>...)= for named capture groups.
-    - =to= (string): The replacement. Use =$name= to refer to the named captured groups. Or use =$1=, =$2=, etc. to refer to the groups by index.
-
-*** JS (=js=)
-
-This filter allows you to run arbitrary JS code to transform the articles. The JS runtime is built upon Fabrice Bellard's [[https://bellard.org/quickjs/][QuickJS]] (via [[https://github.com/DelSkayn/rquickjs][rquickjs]] lib).
-
-Configuration type: string. The string is the JS code to run.
-
-You must define either (or both) of the two global functions: =modify_feed= and =modify_post=.
-
-**** modify_feed
-
-You can define a function named =modify_feed= that takes one argument: =feed=, where =feed= is the RSS feed. The function should return the updated =feed=.
-
-See [[https://docs.rs/rss/latest/rss/struct.Channel.html][Feed]] for the available fields of =feed=. Here's an example on updating a feed's title:
-
-#+begin_src yaml
-  - path: /set-title.xml
-    source: https://tokio.rs/_next/static/feed.xml
-    filters:
-      - js: |
-          function modify_feed(feed) {
-            feed.title = "My Modified Tokio Blog Feed"
-            return feed;
-          }
-#+end_src
-
-You can use this function to modify arbitrary fields in the feed or even add new posts.
-
-**** modify_post
-
-More often you may want to run a filter on individual posts instead of the whole feed. In such case you can define a function named =modify_post= that takes two arguments: =feed= and =post=, where =feed= is the RSS feed and =post= is the article. The function should return the updated =post=. If you want to remove the article, return =null=.
-
-The actual fields of =feed= and =post= can be found in the rss crate: [[https://docs.rs/rss/latest/rss/struct.Channel.html][Feed]], [[https://docs.rs/rss/latest/rss/struct.Item.html][Post]]. But keep in mind that depending on the source and previous filters, you may get different fields. It's best to print out the =feed= and =post= to see what fields are available. The sample =/inspect.xml= endpoint is useful for this purpose.
-
-#+begin_src yaml
-  - path: /inspect.xml
-    filters:
-      - js: |
-          function modify_post(feed, post) {
-            post.content = `<pre>${JSON.stringify(post, null, 2)}</pre>`;
-            return post;
-          }
-#+end_src
-
-You can use =console.log(string)= function to print debugging info to the stdout.
+See [[https://github.com/shouya/rss-funnel/wiki/Cookbook][Cookbook]] for some examples of using =rss-funnel=.
